fixing the bad image title

--- a/_posts/2019-04-26-cfc-50k.md
+++ b/_posts/2019-04-26-cfc-50k.md
@@ -5,7 +5,7 @@ description: "Three years in the making..."
 permalink: /cfc-50k/
 ---
 
-![Ramblin' Reck Club]({{ site.baseurl }}/assets/images/cfc-chart.png)
+![CFC Chart]({{ site.baseurl }}/assets/images/cfc-chart.png)
 
 I don't have a lot of consumer projects -- typically, I build things out [for my own enjoyment](https://github.com/akeaswaran/mls-bar) or [as infrastructure for an organization I'm part of](https://github.com/RamblinReckClub/). But of the [publicly-available projects](https://github.com/akeaswaran) I do have, [College Football Coach for iOS](https://github.com/akeaswaran/FootballCoach-iOS) is arguably the most successful and most impactful -- and guess what? Just shortly after its third birthday, the game has finally crossed 50,000 lifetime downloads. How about that?
 
